--- a/index/css/index.css
+++ b/index/css/index.css
@@ -44,15 +44,45 @@ body{
 	outline: none;
 }
 
-.stats-container ul{
-	list-style: none;
+.stats-container {
+	text-align: center;
 }
 
-.stats-container .seconds{
+.stats-container ul {
+	list-style: none;
+	text-align: left;
+}
+
+.stats-container .seconds {
 	transition: 0.5s;
 }
 
-.stats-container .seconds.start{
+.stats-container .seconds.start {
 	color: red;
 	font-size: 15px;
+}
+
+.stats-container button {
+	margin-top: 10px;
+	border-radius: 5px;
+	border: #333 solid 1px;
+	background: white;
+	width: 150px;
+	height: 50px;
+	text-transform: uppercase;
+	font-weight: 600;
+	color: #333;
+	font-family: 'Abel';
+	font-size: 20px;
+	transition: 0.3s;
+}
+
+.stats-container button:hover {
+	background: #333;
+	color: white;
+	transform: translateY(5px);
+}
+
+.stats-container button:focus {
+	outline: none;
 }
