--- a/index/css/index.css
+++ b/index/css/index.css
@@ -1,12 +1,12 @@
-body{
+body {
 	color: #333;
 	font-family: Helvetica;
+  background-image: linear-gradient(to right , #6E5EA9, #478EC4);
 }
 
-header {
+.header-container {
 	font-family: 'Abel';
 	text-align: center;
-  background-image: linear-gradient(149deg , #6E5EA9, #478EC4);
   color: #9dd5f4;
 }
 
@@ -76,6 +76,8 @@ header {
   resize: none;
   font-family: Times New Roman;
   font-size: 50px;
+  padding: 0;
+  float: left;
 }
 
 .field-container textarea::placeholder {
@@ -86,40 +88,84 @@ textarea:focus {
   outline: none;
 }
 
-#text{
+#text {
   display: none;
 }
 
-#field.green{
+#field.green {
 	color:#008000 ;
 	background: #EAFFEA;
 }
 
-#field.red{
+#field.red {
 	color:#9B0000 ;
 	background: #FFEAEA;
 }
 
-/*
-.input-test{
-  width: 500px;
-  height: 200px;
-  position: relative;
+.buttons-table-container {
+  padding: 0;
 }
 
-.teste::before {
+.buttons-container {  
+  text-align: center;
+}
+
+.buttons-container button {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 40px;
+  margin: 25px 0;
+  transition: 1s;
+}
+
+.buttons-container button:hover {
+  transform: rotate(180deg);
+}
+
+.table-container {
+  position: relative;
+  margin: 0 auto;
+}
+
+.table {
+  margin: 0;
+  transform: translateZ(1px);
+}
+
+.table-bg {
+  width: 100%;
+  height: 100%;
   position: absolute;
-  top: 3px;
-  left: 3px;
-  right: 2px;
-  bottom: 2px;
-  content: "teste";
-  pointer-events: none;
-  opacity: 1;
-  height: 20px;
-  z-index: 1;
+  background: white;
+  opacity: 0.1;
+  filter: blur(1px);
 }
 
-.teste {
-  position: relative;
-}*/
+td, th {
+  text-align: center;
+  border: none;
+}
+
+th {
+  color: #9dd5f4;
+  text-shadow: 0 0 6px rgba(157,213,244,.5);
+  font-family: Abel;
+  text-transform: uppercase;
+  font-size: 25px;
+}
+
+td {
+  color: white;
+  font-size: 20px;
+  font-family: Abel;
+}
+
+td i {
+  cursor: pointer;
+}
+
+.table tbody>tr>td,
+.table thead>tr>th{
+  border: none;
+}
