--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,13 +16,107 @@ body {
   text-shadow: 0 0 6px rgba(157,213,244,.5);
 }
 
+/* SPINNER */
+
+@keyframes lds-eclipse {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes lds-eclipse {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.loading div {
+  position: absolute;
+  -webkit-animation: lds-eclipse 1s linear infinite;
+  animation: lds-eclipse 1s linear infinite;
+  width: 160px;
+  height: 160px;
+  top: 20px;
+  left: 20px;
+  border-radius: 50%;
+  box-shadow: 0 10px 0 0 #9dd5f4;
+  -webkit-transform-origin: 80px 85px;
+  transform-origin: 80px 85px;
+}
+
+.loading {
+  margin: 15px auto;
+  position: relative;
+  width: 37px !important;
+  height: 37px !important;
+  -webkit-transform: translate(-18.5px, -18.5px) scale(0.185) translate(18.5px, 18.5px);
+  transform: translate(-18.5px, -18.5px) scale(0.185) translate(18.5px, 18.5px);
+  display: none;
+}
+
+/* END-SPINNER */
+
 .text-container {
-  margin-bottom: 50px;
+  margin-bottom: 25px;
 }
 
 .text-container p {
   color: white;
   font-size: 30px;
+}
+
+.error-container{
+  display: none;
+}
+
+.error-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.error-bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: white;
+  filter: blur(1px);
+  opacity: 0.6;
+}
+
+.error-container .wrapper {
+  transform: translateZ(1px);
+}
+
+.error {
+  padding: 20px 30px;
+  color: red;
+  display: inline-block;
+  margin: 0;
+}
+
+.error i {
+  margin-right: 15px;
+}
+
+.stats-container {
+  margin-top: 25px;
 }
 
 .stats-container ul {
@@ -96,7 +190,7 @@ textarea:focus {
   text-align: center;
 }
 
-button:focus{
+button:focus {
   outline: none;
 }
 
@@ -108,7 +202,7 @@ button:focus{
   margin: 25px 10px;
 }
 
-.restart{
+.restart {
   transition: 1s;
 }
 
