--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,6 +4,12 @@ body {
   background-image: linear-gradient(to right , #6E5EA9, #478EC4);
 }
 
+/*#################################################################################
+########################################## HEADER #################################
+#################################################################################*/
+
+/*########################################## TITLE #############################*/
+
 .header-container {
 	font-family: 'Abel';
 	text-align: center;
@@ -16,7 +22,7 @@ body {
   text-shadow: 0 0 6px rgba(157,213,244,.5);
 }
 
-/* SPINNER */
+/*########################################## LOADING #############################*/
 
 @keyframes lds-eclipse {
   0% {
@@ -71,7 +77,7 @@ body {
   display: none;
 }
 
-/* END-SPINNER */
+/*########################################## TEXT-EXAMPLE #############################*/
 
 .text-container {
   margin-bottom: 25px;
@@ -81,6 +87,8 @@ body {
   color: white;
   font-size: 30px;
 }
+
+/*########################################## ERROR-AJAX #############################*/
 
 .error-container{
   display: none;
@@ -114,6 +122,8 @@ body {
 .error i {
   margin-right: 15px;
 }
+
+/*########################################## STATS #############################*/
 
 .stats-container {
   margin-top: 25px;
@@ -153,6 +163,12 @@ body {
   transform: rotate(180deg);
 }
 
+/*#################################################################################
+########################################## BODY ###################################
+#################################################################################*/
+
+/*########################################## FIELD #############################*/
+
 .field-container {
   position: relative;
   padding: 0;
@@ -181,6 +197,8 @@ textarea:focus {
 	color:#9B0000 ;
 	background: #FFEAEA;
 }
+
+/*########################################## BUTTONS #############################*/
 
 .buttons-table-container {
   padding: 0;
@@ -226,6 +244,8 @@ button:focus {
   transform: scale(1.2);
 }
 
+/*########################################## TABLE-RECORDS #############################*/
+
 .table-wrapper {
   position: relative;
   margin: 0 auto;
@@ -234,6 +254,7 @@ button:focus {
 .table-container {
   text-align: center;
   display: none;
+  padding: 0;
 }
 
 .table-container h2{
